# memcurve

./: .gitignore  README.md  pyproject.toml
src/memcurve/: __main__.py
