[project]
name = "memcurve"
version = "0.1.0"
description = "Compare process-tree memory usage over time for CLI commands."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "psutil>=5.9",
]

[project.scripts]
memcurve = "memcurve.__main__:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
